java-plugin/src/test/cases/error/ConstPreservation5-14-17.java
import io.github.miracelwhipp.constness.annotation.Const;
import io.github.miracelwhipp.constness.annotation.PreservesConst;


class ConstPreservation {

    void nonConst() {

    }

    @PreservesConst
    void preserveConst() {

        nonConst(); // compile error
    }

}